# Face-Recognition

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  configure.sh  run.sh
src/: main.cpp
src/gui/imgui/: Gui.cpp  Gui.h
src/gui/program/: Program.h
src/gui/windowManager/: WindowManager.cpp  WindowManager.h
src/image-processor/: ImageProcessor.cpp  ImageProcessor.h
src/neural-system/: NeuralSystem.cpp  NeuralSystem.h
src/neural-system/neuron/: Neuron.cpp  Neuron.h
src/neural-system/neuron/weight/: NeuronWeight.cpp  NeuronWeight.h
src/utils/windowManager/: windowManager.cpp  windowManager.h
submodules/imgui/: CMakeLists.txt
